<resources>
    <string name="app_name">Private Messenger</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="check_internet">Проверьте интернет соединение</string>
    <string name="need_auth">Ошибка авторизации. Вам необходимо заново авторизоваться в приложении</string>
    <string name="invalid_login_or_password">Неверный логин или пароль</string>
    <string name="invalid_credentials">Неверный юзернейм или пароль</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="please_sign_in">Войдите в ваш аккаунт</string>
    <string name="username">Юзернейм</string>
    <string name="sample_user">Sample user</string>
    <string name="password">Пароль</string>
    <string name="invalid_username">*неверный никнейм</string>
    <string name="invalid_password">*неверный пароль</string>
    <string name="sign_in">Войти</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="failure">Ошибка</string>
    <string name="successful">Успех</string>
    <string name="new_message">Новое сообщение</string>
    <string name="message">Сообщение</string>
    <string name="chats">Чаты</string>
    <string name="make_photo_video">Сделать фото/видео</string>
</resources>