<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.auth.AuthFragment">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_42dp"
                android:layout_marginTop="@dimen/_40dp"
                android:fontFamily="@font/black"
                android:text="@string/welcome"
                android:textColor="@color/title"
                android:textSize="@dimen/_28sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/welcome_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_42dp"
                android:layout_marginTop="@dimen/_2dp"
                android:fontFamily="@font/regular"
                android:text="@string/please_sign_in"
                android:textColor="@color/subtitle"
                android:textSize="@dimen/_16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/welcome_text" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/buttons_container"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/_12dp"
                app:layout_constraintTop_toBottomOf="@id/welcome_subtitle">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/fields_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_30dp"
                    android:layout_marginTop="@dimen/_12dp"
                    android:theme="@style/Theme.MaterialComponents"
                    app:cardBackgroundColor="@color/card_bg_color"
                    app:cardCornerRadius="@dimen/_27dp"
                    app:cardElevation="@dimen/_5dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:strokeWidth="0dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/_20dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/username_container"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_12dp"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:id="@+id/username_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_30dp"
                                android:fontFamily="@font/bold"
                                android:text="@string/username"
                                android:textColor="@color/title"
                                android:textSize="@dimen/_18sp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <EditText
                                android:id="@+id/username_input"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="@dimen/_18dp"
                                android:background="@null"
                                android:fontFamily="@font/regular"
                                android:hint="@string/sample_user"
                                android:imeOptions="actionNext"
                                android:inputType="text"
                                android:paddingHorizontal="@dimen/_12dp"
                                android:paddingVertical="@dimen/_8dp"
                                android:textColor="@color/title"
                                android:textColorHint="@color/subtitle"
                                android:textSize="@dimen/_16sp"
                                app:layout_constraintTop_toBottomOf="@id/username_title" />

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_1dp"
                                android:layout_marginHorizontal="@dimen/_30dp"
                                android:src="@color/card_divider"
                                app:layout_constraintTop_toBottomOf="@id/username_input" />

                            <TextView
                                android:id="@+id/invalid_username_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_30dp"
                                android:layout_marginTop="@dimen/_1dp"
                                android:fontFamily="@font/regular"
                                android:text="@string/invalid_username"
                                android:textColor="@color/error"
                                android:textSize="@dimen/_11sp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/username_input" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/password_container"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_6dp"
                            app:layout_constraintTop_toBottomOf="@id/username_container">

                            <TextView
                                android:id="@+id/password_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_30dp"
                                android:fontFamily="@font/bold"
                                android:text="@string/password"
                                android:textColor="@color/title"
                                android:textSize="@dimen/_18sp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <EditText
                                android:id="@+id/password_input"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="@dimen/_18dp"
                                android:background="@null"
                                android:fontFamily="@font/regular"
                                android:hint="*********"
                                android:imeOptions="actionNext"
                                android:inputType="text"
                                android:paddingHorizontal="@dimen/_12dp"
                                android:paddingVertical="@dimen/_8dp"
                                android:textColor="@color/title"
                                android:textColorHint="@color/subtitle"
                                android:textSize="@dimen/_16sp"
                                app:layout_constraintTop_toBottomOf="@id/password_title"
                                tools:ignore="TextFields" />

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_1dp"
                                android:layout_marginHorizontal="@dimen/_30dp"
                                android:src="@color/card_divider"
                                app:layout_constraintTop_toBottomOf="@id/password_input" />

                            <TextView
                                android:id="@+id/invalid_password_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_30dp"
                                android:layout_marginTop="@dimen/_1dp"
                                android:fontFamily="@font/regular"
                                android:text="@string/invalid_password"
                                android:textColor="@color/error"
                                android:textSize="@dimen/_11sp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/password_input" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/action_btn"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_54dp"
                    android:layout_marginHorizontal="@dimen/_30dp"
                    android:layout_marginTop="@dimen/_26dp"
                    app:cardBackgroundColor="@color/primary"
                    app:cardCornerRadius="@dimen/_27dp"
                    app:cardElevation="@dimen/_0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fields_card"
                    app:strokeWidth="@dimen/_0dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/action_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/bold"
                            android:paddingHorizontal="@dimen/_12dp"
                            android:text="@string/sign_in"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_17sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>